# liveclaw

./: .env.example  .gitignore  .railwayignore  .vercelignore  Dockerfile.api  LICENSE  README.md  ROADMAP.md  artisan.html  codebot.html  datastream.html  docker-compose.prod.yml  docker-compose.yml  package.json  pnpm-lock.yaml  railway.toml  turbo.json
.github/workflows/: studio-release.yml
agents/agentelon/: start.sh
agents/artisan/: .env.example  package-lock.json  package.json  start.sh  tsconfig.json
agents/base-pulse/: .env.example  Dockerfile  docker-compose.yml  docker-start.sh  package-lock.json  package.json
agents/defcon/: Dockerfile  package-lock.json  package.json  start.sh  tsconfig.json
agents/generic/: .env.example  package.json
agents/gork/: start.sh
agents/pepe-news/: .env.example  package.json  pnpm-lock.yaml  start.sh
agents/sarah/: .env.example  .gitignore  package-lock.json  package.json  start.sh
agents/spacex/: docker-start.sh  start.sh
apps/agent-runtime/: Dockerfile  entrypoint.sh  package.json
apps/api/: Dockerfile  package.json  tsconfig.tsbuildinfo
apps/studio/: .gitignore  index.html  package.json  tailwind.config.js
apps/studio/src-tauri/: Cargo.toml  tauri.conf.json
apps/studio/src-tauri/capabilities/: default.json
apps/studio/src-tauri/icons/: icon.icns
apps/studio/src-tauri/src/: lib.rs  main.rs
apps/studio/src-tauri/src/commands/: ffmpeg.rs  keychain.rs  mod.rs  obs.rs  obs_portable.rs  runtime.rs
roadmap/: index.html
scripts/: cleanup-pulseaudio.sh  generate-images.js
tools/: dashboard.sh
(+450 files in other folders)
